fixed overflow + appcontext

--- a/frontend/src/Components/swipecards/swipecards.css
+++ b/frontend/src/Components/swipecards/swipecards.css
@@ -2,7 +2,7 @@
     position: relative;
     background-color: #fff;
     width: 400px;
-    padding: 20px;
+    padding: 10px;
     max-width: 85vw;
     height: 50vh;
     box-shadow: 0px 18px 53px 0px rgba(0, 0, 0, 0.3);
@@ -13,7 +13,13 @@
 .swipeCards__cardContainer{
     display: flex;
     justify-content: center;
-    margin-top: 10vh;
+    margin-top: 5vh;
+}
+.swipeCards__contextInfo{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    font-size: 1.2rem;
 }
 .swipe{
     position: absolute;
